--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -93,31 +93,32 @@
 		Uncomment this in containers (GlassFish) that do not declare this 
 		implicit definition out of the box, or change the name of the servlet mapping 
 		below to the appropriate one.
+     -->
 		
-	<servlet>
-		<servlet-name>default</servlet-name>
-		<servlet-class>org.apache.catalina.servlets.DefaultServlet</servlet-class>
-		<init-param>
-			<param-name>debug</param-name>
-			<param-value>0</param-value>
-		</init-param>
-		<init-param>
-			<param-name>listings</param-name>
-			<param-value>false</param-value>
-		</init-param>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
-	-->
+<!-- 	<servlet> -->
+<!-- 		<servlet-name>default</servlet-name> -->
+<!-- 		<servlet-class>org.apache.catalina.servlets.DefaultServlet</servlet-class> -->
+<!-- 		<init-param> -->
+<!-- 			<param-name>debug</param-name> -->
+<!-- 			<param-value>0</param-value> -->
+<!-- 		</init-param> -->
+<!-- 		<init-param> -->
+<!-- 			<param-name>listings</param-name> -->
+<!-- 			<param-value>false</param-value> -->
+<!-- 		</init-param> -->
+<!-- 		<load-on-startup>1</load-on-startup> -->
+<!-- 	</servlet> -->
+
 	<!--
 	 - Map static resources to the default servlet
 	 - examples:
 	 -     http://localhost:8080/static/images/pets.png
 	 -     http://localhost:8080/static/styles/petclinic.css
 	-->
-	<servlet-mapping>
-		<servlet-name>default</servlet-name>
-		<url-pattern>/static/*</url-pattern>
-	</servlet-mapping>
+<!-- 	<servlet-mapping> -->
+<!-- 		<servlet-name>default</servlet-name> -->
+<!-- 		<url-pattern>/static/*</url-pattern> -->
+<!-- 	</servlet-mapping> -->
 	
 	<!--
 		- Servlet that dispatches request to registered handlers (Controller implementations).
@@ -131,7 +132,7 @@
 	<servlet>
 		<servlet-name>petclinic</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<load-on-startup>2</load-on-startup>
+		<load-on-startup>1</load-on-startup>
 	</servlet>
 
 	<!--
