--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
   <groupId>thymeleafexamples</groupId>
   <artifactId>petclinic</artifactId>
   <packaging>war</packaging>
-  <version>20120325</version>
+  <version>20120402</version>
   <name>Thymeleaf Examples - Spring MVC PetClinic application</name>
 
   <description>XML/XHTML/HTML5 template engine for Java</description>
@@ -210,7 +210,7 @@
   <properties>
     <spring.version>3.0.6.RELEASE</spring.version>
     <slf4j.version>1.6.1</slf4j.version>
-    <thymeleaf.version>2.0.5-SNAPSHOT</thymeleaf.version>
+    <thymeleaf.version>2.0.5</thymeleaf.version>
   </properties>
 	
 	
