--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
         <slf4j.version>1.7.2</slf4j.version>
         <spring-data-jpa.version>1.3.0.RELEASE</spring-data-jpa.version>
         <spring-framework.version>3.2.1.RELEASE</spring-framework.version>
+        <thymeleaf.version>2.0.16</thymeleaf.version>
         <validation.version>1.0.0.GA</validation.version>
         <webjars-bootstrap.version>2.3.0</webjars-bootstrap.version>
         <webjars-jquery-ui.version>1.9.2</webjars-jquery-ui.version>
@@ -172,6 +173,17 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
+        </dependency>
+        <!-- Thymeleaf -->
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf</artifactId>
+            <version>${thymeleaf.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf-spring3</artifactId>
+            <version>${thymeleaf.version}</version>
         </dependency>
         <!-- Webjars (static dependencies distributed as JAR files) -->
         <dependency>
