Modified tomcat deployment configuration.

--- a/pom.xml
+++ b/pom.xml
@@ -507,7 +507,7 @@
 		      <configuration>          
 		        <server>tomcat-development-server</server>
 		        <port>9966</port>
-		        <path>/petclinic</path>
+		        <path>/thymeleafexamples-petclinic</path>
 		      </configuration>
 		    </plugin> 
         </plugins>
