Se añade la configuración necesaria para poder utilizar Dozer en nuestro proyecto

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,7 +25,7 @@
 -->
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:spring/business-config.xml, classpath:spring/tools-config.xml, classpath:spring/mybatis-config.xml</param-value>
+       	<param-value>classpath:spring/business-config.xml, classpath:spring/tools-config.xml, classpath:spring/mybatis-config.xml, classpath:spring/dozer-config.xml</param-value>
     </context-param>
 
     <listener>
