--- a/pom.xml
+++ b/pom.xml
@@ -461,6 +461,11 @@
                     </descriptorRefs>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.7.0.1746</version>
+            </plugin>
  		    <plugin>
 		      <groupId>org.apache.tomcat.maven</groupId>
 		      <artifactId>tomcat7-maven-plugin</artifactId>       
