--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>petclinic</artifactId>
     <version>20140513</version>
 
-    <name>petclinic</nam>
+    <name>petclinic</name>
     <packaging>war</packaging>
 
     <properties>
